// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots Radio checked 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid #B4B4B4;
  margin-right: 0.2em;
  border-radius: 50%;
  vertical-align: middle;
}

.c4 {
  display: inline-block;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
}

.c0 {
  cursor: pointer;
}

.c0 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 span {
  vertical-align: middle;
}

.c0:hover .c1,
.c0 > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.c0:hover > input:not(:checked):not(:disabled) ~ .c1,
.c0:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.c0:active > input:not(:checked):not(:disabled) ~ .c1,
.c0 > input:focus:not(:checked):not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 > input:disabled ~ .c1,
.c0 > input:disabled ~ .c3 {
  opacity: 0.5;
}

.c0 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

<label
  checked=""
  class="c0"
>
  <input
    checked=""
    name="demo"
    type="radio"
    value="blah"
  >
    
  </input>
  <span
    class="c1 c2"
  >
    
  </span>
   
  <span
    class="c3 c4"
  >
    
  </span>
</label>
`;

exports[`Snapshots Radio disabled 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid #B4B4B4;
  margin-right: 0.2em;
  border-radius: 50%;
  vertical-align: middle;
}

.c4 {
  display: inline-block;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
}

.kTJrDb:hover .c1,
.kTJrDb > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.kTJrDb:hover > input:not(:checked):not(:disabled) ~ .c1,
.kTJrDb:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.kTJrDb:active > input:not(:checked):not(:disabled) ~ .c1,
.kTJrDb > input:focus:not(:checked):not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.kTJrDb > input:disabled ~ .c1,
.kTJrDb > input:disabled ~ .c3 {
  opacity: 0.5;
}

.kTJrDb > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

.c0 {
  cursor: pointer;
  cursor: not-allowed;
}

.c0 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 span {
  vertical-align: middle;
}

.c0:hover .c1,
.c0 > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.c0:hover > input:not(:checked):not(:disabled) ~ .c1,
.c0:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.c0:active > input:not(:checked):not(:disabled) ~ .c1,
.c0 > input:focus:not(:checked):not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 > input:disabled ~ .c1,
.c0 > input:disabled ~ .c3 {
  opacity: 0.5;
}

.c0 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

.c0:hover .c1 {
  box-shadow: none;
}

<label
  class="c0"
  disabled=""
>
  <input
    disabled=""
    name="demo"
    type="radio"
    value="blah"
  >
    
  </input>
  <span
    class="c1 c2"
  >
    
  </span>
   
  <span
    class="c3 c4"
  >
    
  </span>
</label>
`;

exports[`Snapshots Radio unchecked 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid #B4B4B4;
  margin-right: 0.2em;
  border-radius: 50%;
  vertical-align: middle;
}

.c4 {
  display: inline-block;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
}

.c0 {
  cursor: pointer;
}

.c0 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 span {
  vertical-align: middle;
}

.c0:hover .c1,
.c0 > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.c0:hover > input:not(:checked):not(:disabled) ~ .c1,
.c0:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.c0:active > input:not(:checked):not(:disabled) ~ .c1,
.c0 > input:focus:not(:checked):not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 > input:disabled ~ .c1,
.c0 > input:disabled ~ .c3 {
  opacity: 0.5;
}

.c0 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

<label
  class="c0"
>
  <input
    name="demo"
    type="radio"
    value="blah"
  >
    
  </input>
  <span
    class="c1 c2"
  >
    
  </span>
   
  <span
    class="c3 c4"
  >
    
  </span>
</label>
`;

exports[`Snapshots Render children 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid #B4B4B4;
  margin-right: 0.2em;
  border-radius: 50%;
  vertical-align: middle;
}

.c4 {
  display: inline-block;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
}

.c0 {
  cursor: pointer;
}

.c0 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 span {
  vertical-align: middle;
}

.c0:hover .c1,
.c0 > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.c0:hover > input:not(:checked):not(:disabled) ~ .c1,
.c0:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.c0:active > input:not(:checked):not(:disabled) ~ .c1,
.c0 > input:focus:not(:checked):not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 > input:disabled ~ .c1,
.c0 > input:disabled ~ .c3 {
  opacity: 0.5;
}

.c0 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

.hNeHJU:hover .c1,
.hNeHJU > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.hNeHJU:hover > input:not(:checked):not(:disabled) ~ .c1,
.hNeHJU:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.hNeHJU:active > input:not(:checked):not(:disabled) ~ .c1,
.hNeHJU > input:focus:not(:checked):not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.hNeHJU > input:disabled ~ .c1,
.hNeHJU > input:disabled ~ .c3 {
  opacity: 0.5;
}

.hNeHJU > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

.hNeHJU:hover .c1 {
  box-shadow: none;
}

<label
  class="c0"
>
  <input
    name="demo"
    type="radio"
    value="blah"
  >
    
  </input>
  <span
    class="c1 c2"
  >
    
  </span>
   
  <span
    class="c3 c4"
  >
    Hello
  </span>
</label>
`;
